welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<- 0 to n-3)
        ^